--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "apollo-server-micro": "2.13.1",
+    "fs": "0.0.1-security",
     "graphql": "15.0.0",
     "next": "latest",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-select": "^3.1.0"
   },
   "license": "ISC"
 }
